# mcp-optimizer

./: .gitignore  Dockerfile  LICENSE  MCP_SETUP.md  Makefile  QUICKSTART.md  README.md  claude_desktop_config.json.example  pyproject.toml  smithery.json  smithery.yaml  test_mcp.py
.github/workflows/: ci.yml
.smithery/: smithery  startup.sh
configs/: crew.yaml
docker/: Dockerfile  compose.yaml
examples/: call_tools.http  run_http.sh  run_stdio.sh  small_lp.json  small_mip.json
scripts/: bench_lp.py  generate_instances.py
src/crew_optimizer/: __init__.py  agents.py  crew.py  schemas.py  server.py
src/crew_optimizer/solvers/lp/: __init__.py  assignment_parser.py  data_parser.py  diagnostics.py  enhanced_parser.py  parser.py  simplex.py
src/crew_optimizer/solvers/mip/: __init__.py  branch_and_cut.py
src/crew_optimizer/tools/: __init__.py  diagnostics.py  lp_solver.py  mip_solver.py  nl_parser.py
src/mcp_optimizer/: __init__.py  schemas.py  server.py
src/mcp_optimizer/lp/: __init__.py  parser.py  simplex.py  utils.py
src/mcp_optimizer/mip/: __init__.py  branch_and_cut.py
tests/: test_assignment_parser.py  test_data_parser.py  test_lp_duals.py  test_lp_simplex.py  test_lp_solver.py  test_mip_basic.py  test_mip_solver.py  test_parser.py
