[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "crew-optimizer"
version = "0.1.0"
description = "CrewAI agents and tools for LP simplex and MILP branch-and-bound solving"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mrugank Pednekar" }]

dependencies = [
  "mcp[cli]>=1.2.0",
  "crewai>=0.201.1",
  "crewai-tools>=0.75.0",
  "numpy>=1.26",
  "scipy>=1.13",
  "pydantic>=2.7",
]

[project.optional-dependencies]
mip = ["ortools>=9.10"]
excel = ["pandas>=2.0", "openpyxl>=3.0"]

[tool.uv]
dev-dependencies = ["pytest>=8", "ruff>=0.5", "black>=24.10"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
